[package]
name = "subfind"
version = "0.1.0"
authors = ["k0ur0x <kourox@protonmail.com>"]
edition = "2018"
description = "Find words in subtitles"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtitles = { path = "../subtitles" }

clap = "~2.33"
ansi_term = "0.12"
regex = "1"
